--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ env:
     - PORT=3000
     - MONGODB_URL=mongodb://localhost:27017/blue-origin-x-team-i
 script:
+  - cd server
   - npm run lint
   - npm run test
 after_success: npm run coverage:coveralls
